--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mailgen": "^2.0.27",
+    "moment": "^2.29.4",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "nodemailer": "^6.9.3",
