--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "otp-generator": "^4.0.1"
